Update slide 5 in slide

--- a/_posts/0000-01-02-brsiglar.md
+++ b/_posts/0000-01-02-brsiglar.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to brsiglar's slide!"
 ---
-Some new information
+This is my awesome slide
 Use the left arrow to go back!
