--- a/_posts/0000-01-02-brsiglar.md
+++ b/_posts/0000-01-02-brsiglar.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to brsiglar's slide!"
 ---
-This is my awesome slide
+This is my awesome slide :tada:!
 Use the left arrow to go back!
